--- a/index.html
+++ b/index.html
@@ -6,10 +6,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+
+    <div class="barra_navegacion">
+        <div class="izquierda">Header Logo</div>
+        <div class="derecha">
+            <ul>
+                <li>link 1</li>
+                <li>link 2</li>
+                <li>link 3</li> 
+            </ul>
+        </div>
+    </div>
+    <div class="cabecera">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button class="sign_up">Sign up</button>
+        <div>
+            <img src="images/negro.png" alt="Imágen negra">
+        </div>          
+    </div>
+    <div class="cuerpo">
+        <h2>Some random information</h2>
+        <div class="tarjetas">
+            <div class="mini_seccion_1">
+                <img src="images/azul.png" alt="imagen">
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+            <div class="mini_seccion_2">
+                <img src="images/amarillo.png" alt="imagen">
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+            <div class="mini_seccion_3">
+                <img src="images/verde.png" alt="imagen">
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+            <div class="mini_seccion_4">
+                <img src="images/rojo.png" alt="imagen">
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="leyenda">
+        <p class="parrafo_leyenda">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="firma_leyenda">Thor, God of Thunder</p>
+    </div>
+    <div class="llamada_a_la_accion">
+        <div class="descripcion">
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button rigth over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <div class="pie_pagina">
+        <p>Copyright @ Todos los derechos reservados.</p>
+    </div>
+
     
 </body>
 </html>
