Primera finalizacion de proyecto

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="logo_barra_navegacion">Header Logo</div>
         <div>
             <ul class="links_barra_navegacion">
-                <li>link 1</li>
-                <li>link 2</li>
-                <li>link 3</li> 
+                <li><a href="#" class="link">link 1</a></li>
+                <li><a href="#" class="link">link 2</a></li>
+                <li><a href="#" class="link">link 3</a></li> 
             </ul>
         </div>
     </div>
@@ -63,7 +63,7 @@
         <button class="boton_sign_up_leyenda">Sign up</button>
     </div>
     <div class="pie_pagina">
-        <p>Copyright @ Todos los derechos reservados.</p>
+        <p>Copyright   @   The Odin Project 2021</p>
     </div> 
 </body>
 </html>
