--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
+  
   <header>
     <div class="header-logo">Header Logo</div>
     <nav class="navigation-menu">
@@ -19,22 +21,49 @@
       </ul>
     </nav>
   </header>
+  
   <main>
-    <div class="after-header">
-      <div class="left">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <div class="button">
-          <a href="">Sign up</a>
+    <div class="first-block">
+      <div class="after-header">
+        <div class="left">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <div class="button">
+            <a href="">Sign up</a>
+          </div>
+        </div>
+        <div class="right">
+          this is a place holder for an image
         </div>
       </div>
-      <div class="right">
-        this is a place holder for an image
-      </div>
     </div>
-    <div class="information">
-      <h2>Some random information</h2>
+    <div class="main-information second-block">
+      <h2>Some random information.</h2>
+      <div class="information-content"> <!--flexbox row-->
+        <div> 
+          <div class="image"></div>
+          <figcaption>this is some subtext under an illustration image</figcaption>
+        </div>
+        <div>      
+          <div class="image"></div>
+          <figcaption>this is some subtext under an illustration image</figcaption>  
+        </div>       
+        <div> 
+          <div class="image"></div>
+          <figcaption>this is some subtext under an illustration image</figcaption>
+        </div>        
+        <div> 
+          <div class="image"></div>
+          <figcaption>this is some subtext under an illustration image</figcaption>
+        </div>
+      </div>  
     </div>
+    <div class="third-block">
+      <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+      <p>Thor, God of Thunder</p>
+
+    </div>
+    
     
 
     </div>
